# desktop_robot_projects

calibration/: main.cpp
desktop_robot_localization/: cluster.h  main.cpp  path_planning.h  pose_estimate.h  pose_graph_optimize.h  test  trajectory.h  vfh.h
expression_management_face_detect/: .data_transport.h.swp  data_transport.h  expression_manage.h  images_receive.h  images_send.h  main.cpp  test
file_data_simulation/: file_read.h  main.cpp  test
file_data_simulation/data/: around1.txt  forward_50cm.txt  forward_50cm_2.txt  test10.txt  test11.txt  test12.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  turn_left_test.txt  turn_right_test.txt
images_sender/: data_transport.h  main.cpp  test
localization_and_path_planning/: CMakeLists.txt
localization_and_path_planning/include/data_transport/: data_transport.h
localization_and_path_planning/include/hardware_devices/: keyboard.h
localization_and_path_planning/include/localization/: pose_estimate.h
localization_and_path_planning/include/loop_closure/: loop_closure_detect.h
localization_and_path_planning/include/path_planning/: apf.h  apf_process.h  dwa.h
localization_and_path_planning/include/pgo/: nano_pgo.hpp
localization_and_path_planning/include/utils/: data_type.h
localization_and_path_planning/include/visualization/: visualize.h
loop_closure_detection/: loop_closure_detect.h  main.cpp  test
